<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginTop="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/avatar_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toTopOf="@+id/login_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintEnd_toStartOf="@+id/following_count_text"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/following_count_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_30"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/following_text"
        app:layout_constraintEnd_toStartOf="@+id/followers_count_text"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/avatar_view"
        app:layout_constraintTop_toTopOf="@+id/avatar_view"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/followers_count_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_120"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/followers_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/following_count_text"
        app:layout_constraintTop_toTopOf="@+id/avatar_view"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/following_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/avatar_view"
        app:layout_constraintEnd_toEndOf="@+id/following_count_text"
        app:layout_constraintStart_toStartOf="@+id/following_count_text"
        app:layout_constraintTop_toBottomOf="@+id/following_count_text" />

    <TextView
        android:id="@+id/followers_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/avatar_view"
        app:layout_constraintEnd_toEndOf="@+id/followers_count_text"
        app:layout_constraintStart_toStartOf="@+id/followers_count_text"
        app:layout_constraintTop_toBottomOf="@+id/followers_count_text" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/avatar_view"
        app:layout_constraintTop_toBottomOf="@+id/avatar_view" />
</androidx.constraintlayout.widget.ConstraintLayout>